--- a/angular.json
+++ b/angular.json
@@ -18,6 +18,8 @@
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
             "outputPath": "dist/denz-dev",
+            "baseHref": "/denz-dev/",
+            "deployUrl": "/denz-dev/",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": [
