--- a/angular.json
+++ b/angular.json
@@ -18,8 +18,6 @@
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
             "outputPath": "dist/denz-dev",
-            "baseHref": "/denz-dev/",
-            "deployUrl": "/denz-dev/",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": [
@@ -38,6 +36,9 @@
           },
           "configurations": {
             "production": {
+              "outputPath": "docs",
+              "baseHref": "/denz-dev/",
+              "deployUrl": "/denz-dev/",
               "budgets": [
                 {
                   "type": "initial",
